<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="isProgressBarVisible"
            type="Boolean" />

        <variable
            name="pokemonAdapter"
            type="com.example.pokedex.pokemon.PokemonAdapter" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:contentDescription="@string/toolbar_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/progress_bar_description"
            android:indeterminateDrawable="@drawable/pokeball_progress_bar"
            android:visibility="@{isProgressBarVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPokemons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/recycler_view_description"
            app:adapter="@{pokemonAdapter}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{isProgressBarVisible ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            shimmer:duration="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/data_place_holder_layout" />

                <include layout="@layout/data_place_holder_layout" />

                <include layout="@layout/data_place_holder_layout" />

                <include layout="@layout/data_place_holder_layout" />

                <include layout="@layout/data_place_holder_layout" />
            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>